cabal-version:       3.0
name:                om-kubernetes
version:             2.3.1.0
synopsis:            om-kubernetes
description:         Haskell Kubernetes utilities.
homepage:            https://github.com/owensmurray/om-kubernetes
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2022 Owens Murray
-- category:            
build-type:          Simple
extra-source-files:
  README.md

common warnings
  ghc-options:
    -Wall
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints

common dependencies
  build-depends:
    , aeson               >= 1.5.6.0   && < 1.6
    , base                >= 4.14      && < 4.15
    , bytestring          >= 0.10.12.0 && < 0.11
    , connection          >= 0.3.1     && < 0.4
    , data-default-class  >= 0.1.2.0   && < 0.2
    , http-api-data       >= 0.4.2     && < 0.5
    , http-client         >= 0.6.4.1   && < 0.7
    , http-client-tls     >= 0.3.5.3   && < 0.4
    , http-types          >= 0.12.3    && < 0.13
    , om-http             >= 0.2.0.0   && < 0.3
    , safe-exceptions     >= 0.1.7.2   && < 0.2
    , servant             >= 0.18.3    && < 0.19
    , servant-client      >= 0.18.3    && < 0.19
    , servant-client-core >= 0.18.3    && < 0.19
    , text                >= 1.2.4.1   && < 1.3
    , tls                 >= 1.5.6     && < 1.6
    , x509-store          >= 1.6.7     && < 1.7

library
  import: warnings, dependencies
  exposed-modules:     
    OM.Kubernetes
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010

